whoami/instrumented-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.custom.label: instrumented
  name: instrumented-service
  namespace: whoami-ns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: a.domain.de
    external-dns.alpha.kubernetes.io/endpoints-type: NodeExternalIP
spec:
  ports:
    - name: 'web'
      port: 80
      targetPort: 8080
  selector:
    io.custom.label: instrumented
  type: ClusterIP
