whoami/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.custom.label: whoami
  name: whoami-service
  namespace: whoami-ns
spec:
  ports:
    - name: 'web'
      port: 80
      targetPort: 80
  selector:
    io.custom.label: whoami
  type: ClusterIP
