whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami-ns
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
  #   traefik.ingress.kubernetes.io/router.tls: 'true'
  #   traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  rules:
    - host: k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: instrumented-service
                port:
                  number: 80
